[package]
name = "oxided-wire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version="0.5.0", features = ["json"] }
rocket_ws = "0.1.0"
serde = "1.0.193"
serde_json = "1.0"